# cache-performance-insight

./: .gitignore  CMakeLists.txt  README.md  build.sh  rocksdb_use.cpp  rocksdb_use_multi_threads.cpp
docs/: cache_policies.md  implement.md
plots/3.1.2/: main.py
plots/3.3.4/: main.py  main2.py
plots/4.2.1/: main.py
plots/4.2.2/: main.py
plots/5.2.1/: main.py
plots/D2.1/: 1.eps  2.eps  3.eps  4.eps  5.eps  6.eps  7.eps  b1.eps  lrfu2.eps  main.py  main2.py
plots/D2.2/: lrfu_para.py  lrfu_para2.eps
plots/D4.1/: 1.eps  1b.eps  1c.eps  1d.eps  main.py  main2.py  new_pic.py
plots/D4.2/: main.py  msr_proj_0_2.eps  online_2.eps  webmail_2.eps  webmail_2b.eps  webmail_2c.eps  webmail_2d-2.eps  webmail_2d-3.eps  webmail_2d-4.eps  webmail_2e.eps
plots/D4.3/: 1.eps  2.eps  main.py  main2.py
plots/D4.4/: main.py
plots/D4.5/: 1.eps  main.py
plots/D4.6/: 1.eps  2.eps  3.eps  4.eps  both_compare6.eps  main.py  main2.py
plots/D4.7/: 1.eps  2.eps  main2.py
scripts/: bench_memc.py  bench_memc_logparser.py  compare_bar_plot.py  decay_rate_hitratio.py  efsw_params_optimizer.py  key_distribution.py  main.py  memc_rdb_bench.py  params_optimizer.py  reload_cache.py  rocksdb_trace_parser.py  runner.py  runner_all.py  runner_oltp.py  runner_params.py  test_runner.py  test_runner_all.py  trace_analyzer.py  trace_processor.py  utils.py  vis_memc_rdb.py
src/: CMakeLists.txt  def.h  main.cpp
src/data_structures/: deque_dict.hpp  dynamic_decay_heap.cpp  dynamic_decay_heap.h  dynamic_decay_lru.cpp  dynamic_decay_lru.h  heap_dict.hpp  lazy_update_heap.cpp  lazy_update_heap.h  link_list.cpp  link_list.h  lru_list.cpp  lru_list.h  multi_lru.cpp  multi_lru.h
src/managers/: alrfu2_cache_manager.cpp  alrfu2_cache_manager.h  alrfu3_cache_manager.cpp  alrfu3_cache_manager.h  alrfu4_cache_manager.cpp  alrfu4_cache_manager.h  alrfu5_cache_manager.cpp  alrfu5_cache_manager.h  alrfu_cache_manager.cpp  alrfu_cache_manager.h  arc2_cache_manager.cpp  arc2_cache_manager.h  arc3_cache_manager.cpp  arc3_cache_manager.h  arc_cache_manager.cpp  arc_cache_manager.h  cache_manager.h  cacheus_cache_manager.cpp  cacheus_cache_manager.h  dlirs_cache_manager.cpp  dlirs_cache_manager.h  drrip_cache_manager.cpp  drrip_cache_manager.h  efsw_cache_manager.cpp  efsw_cache_manager.h  ff_cache_manager.cpp  ff_cache_manager.h  glrfu2_cache_manager.cpp  glrfu2_cache_manager.h  glrfu3_cache_manager.cpp  glrfu3_cache_manager.h  glrfu4_cache_manager.cpp  glrfu4_cache_manager.h  glrfu_cache_manager.cpp  glrfu_cache_manager.h  lfu_cache_manager.cpp  lfu_cache_manager.h  lhd_cache_manager.cpp  lhd_cache_manager.h  lirs_cache_manager.cpp  (+25 more)
src/test_class/: test_class.cpp  test_class.h
src/utils/: unittest_utils.cpp  unittest_utils.h
traces/: Rocks1_s.lis
unittest/: CMakeLists.txt  arc2_test.cpp  arc3_test.cpp  arc_test.cpp  ff_test.cpp  lfu_test.cpp  lru_test.cpp  mrf_test.cpp  opt_test.cpp  srrip_test.cpp  stw2_test.cpp  stw_test.cpp
